# stellar-rent-a-gelato

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
backend-keeper/: .env.example  package.json
backend-keeper/src/: config.ts  index.ts  logger.ts
contracts/rent_gelato/: Cargo.toml
contracts/rent_gelato/src/: errors.rs  lib.rs  test.rs  types.rs
frontend/: .env.example  .gitignore  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ShieldButton.tsx
frontend/lib/: gelatoClient.ts
frontend/scripts/: generate-bindings.mjs
